--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,18 +22,17 @@
 		color: #e8b025;
 	}
 
-	.tg  {border-collapse:collapse;border-spacing:0;}
-	.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
-	.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
-	.tg .tg-u37x{background-color:#e8e8e8;text-align:center;vertical-align:top}
-	.tg .tg-1sci{background-color:#333333;color:#ffffff;text-align:center;vertical-align:top}
-	.tg .tg-erlg{font-weight:bold;background-color:#efefef;vertical-align:top}
+	.tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
+	.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;border-top-width:1px;border-bottom-width:1px;}
+	.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;border-top-width:1px;border-bottom-width:1px;}
 	.tg .tg-baqh{text-align:center;vertical-align:top}
 	.tg .tg-9ihe{background-color:#d6d5d5;text-align:center;vertical-align:top}
-	.tg .tg-yf2n{font-weight:bold;background-color:#333333;color:#ffffff;text-align:center;vertical-align:top}
+	.tg .tg-3we0{background-color:#ffffff;vertical-align:top}
 	.tg .tg-m1tb{font-weight:bold;background-color:#000000;color:#ffffff;text-align:center;vertical-align:top}
-	.tg .tg-5ncq{font-weight:bold;color:#333333;text-align:center;vertical-align:top}
-
+	.tg .tg-b7b8{background-color:#f9f9f9;vertical-align:top}
+	.tg .tg-dzk6{background-color:#f9f9f9;text-align:center;vertical-align:top}
+	.tg .tg-lgip{background-color:#d6d5d5;text-align:center;vertical-align:top}
+	.tg .tg-yw4l{vertical-align:top}
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
 	}
